--- a/aidanna/netlify.toml
+++ b/aidanna/netlify.toml
@@ -2,9 +2,10 @@
   command = "npm run build"
   publish = ".next"
 
-[plugins]
+[[plugins]]
   package = "@netlify/plugin-nextjs"
 
 [functions]
   node_bundler = "esbuild"
+  # Keep OpenAI out of the bundle to avoid ESM/CJS issues
   external_node_modules = ["openai"]
